feat alter methods
