# backend/storage/api-docs/api-docs.json
@@ -242,15 +242,6 @@
                                     "SKU": {
                                         "type": "string",
                                         "example": "SKU12345"
-                                    },
-                                    "published_at": {
-                                        "type": "string",
-                                        "format": "date-time",
-                                        "example": "2024-10-11T00:00:00Z"
-                                    },
-                                    "user_id": {
-                                        "type": "integer",
-                                        "example": 1
                                     }
                                 },
                                 "type": "object"
@@ -420,15 +411,6 @@
                                     "SKU": {
                                         "type": "string",
                                         "example": "SKU54321"
-                                    },
-                                    "published_at": {
-                                        "type": "string",
-                                        "format": "date-time",
-                                        "example": "2024-10-11T00:00:00Z"
-                                    },
-                                    "user_id": {
-                                        "type": "integer",
-                                        "example": 2
                                     }
                                 },
                                 "type": "object"
@@ -483,69 +465,6 @@
             }
         },
         "/api/stock": {
-            "get": {
-                "tags": [
-                    "Stock"
-                ],
-                "summary": "Get filtered stock data",
-                "description": "Retrieve stock entries based on filters such as user, product, and period.",
-                "operationId": "getStockData",
-                "parameters": [
-                    {
-                        "name": "user_id",
-                        "in": "query",
-                        "description": "Filter by user ID",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "example": 1
-                        }
-                    },
-                    {
-                        "name": "product_id",
-                        "in": "query",
-                        "description": "Filter by product ID",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "example": 10
-                        }
-                    },
-                    {
-                        "name": "start_date",
-                        "in": "query",
-                        "description": "Filter by start date (YYYY-MM-DD)",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "format": "date",
-                            "example": "2024-01-01"
-                        }
-                    },
-                    {
-                        "name": "end_date",
-                        "in": "query",
-                        "description": "Filter by end date (YYYY-MM-DD)",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "format": "date",
-                            "example": "2024-10-01"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved stock data"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
             "post": {
                 "tags": [
                     "Stock"
@@ -600,6 +519,71 @@
                 "responses": {
                     "201": {
                         "description": "Stock entry created successfully"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
+        "/api/stock/filter": {
+            "post": {
+                "tags": [
+                    "Stock"
+                ],
+                "summary": "Get filtered stock data",
+                "description": "Retrieve stock entries based on filters such as user, product, and period.",
+                "operationId": "getStockData",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "Filter by user ID",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "product_id",
+                        "in": "query",
+                        "description": "Filter by product ID",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "start_date",
+                        "in": "query",
+                        "description": "Filter by start date (YYYY-MM-DD)",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date",
+                            "example": "2024-01-01"
+                        }
+                    },
+                    {
+                        "name": "end_date",
+                        "in": "query",
+                        "description": "Filter by end date (YYYY-MM-DD)",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date",
+                            "example": "2024-10-01"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved stock data"
                     },
                     "400": {
                         "description": "Bad request"
